Added lcd ui + multiple on device editors

--- a/sequencer/index.html
+++ b/sequencer/index.html
@@ -4,6 +4,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/index.js"></script>
 <link rel="stylesheet" href="/index.css"/>
+<meta name="viewport" content="width=600, user-scalable = no, initial-scale=1.5, maximum-scale=1.5">
 </head>
 <body>
 	
@@ -20,7 +21,7 @@
 		<div id="button21" class="button clickable">B21</div>
 		<div id="button22" class="button clickable">B22</div>
 		<div id="button23" class="button clickable">B23</div>
-		<div id="led20" class="led on">L20</div>
+		<div id="led20" class="led">L20</div>
 		<div id="led21" class="led">L21</div>
 		<div id="led22" class="led">L22</div>
 		<div id="led23" class="led">L23</div>
